<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="#4f4f4f"
        android:text="@string/layout_find_friend_des"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:maxLength="10"
        android:textSize="18sp"
        android:background="@drawable/bg_edit_text"
        android:singleLine="true"
        android:hint="@string/layout_find_friend_hint"
        android:inputType="number" />

    <ImageView
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_start_to_use" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/view_line" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_friend_des_bottom" >

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="12dp"
        android:layout_marginTop="65dp"
        android:layout_toLeftOf="@+id/textView2"
        android:src="@drawable/icon_find_friend_big" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignRight="@+id/edit_phone"
        android:layout_marginRight="46dp"
        android:textColor="#4f4f4f"
        android:text="@string/menu_find_friend"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="34sp" />

</RelativeLayout>
